--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Robinpahwa.github.com</h1>
+        <h1>Robin Pahwa</h1>
         <h2></h2>
         <a href="https://github.com/robinpahwa" class="button"><small>Follow me on</small>GitHub</a>
       </div>
