Changing the Title of the Home Page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
                         <![endif]-->
 
-                        <title>Robinpahwa.github.com by robinpahwa</title>
+                        <title>Welcome to Robin Pahwa's Home Page</title>
                         </head>
 
                         <body>
